--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
               <h3 style="float: right;">&times;</h3>
           </div>
           <div class="tab">
-              <div class="tablinks tablinks_details" onclick="openCity(event, 'London')" id="defaultOpen">Hiệp 1</div>
-              <div class="tablinks tablinks_manageUserSale" onclick="openCity(event, 'Tokyo')">Hiệp 2</div>
-              <div class="tablinks tablinks_manageUserGroup" onclick="openCity(event, 'Paris')">Tất cả</div>
+              <div class="tablinks tablinks_details" onclick="getGameDetails('round1')" id="defaultOpen">Hiệp 1</div>
+              <div class="tablinks tablinks_manageUserSale" onclick="getGameDetails('round2')">Hiệp 2</div>
+              <div class="tablinks tablinks_manageUserGroup" onclick="getGameDetails('all')">Tất cả</div>
           </div>
           <div id="London" class="tabcontent">
               <div class="wrapper_infor" style="padding-top: 25px;">
@@ -147,9 +147,6 @@
         </ul>
       </div>
     </footer>
-    <input type="text" class="txtRound">
-    <input type="text" class="txtGameId">
-
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -170,6 +167,7 @@
       storageBucket: "resultsgame.appspot.com",
       messagingSenderId: "1080413171479"
      };
+     var gameId = "";
    var defaultApp = firebase.initializeApp(config);
    var defaultDatabase = defaultApp.database();
    var ref = defaultDatabase.ref("games");
@@ -177,7 +175,7 @@
    // var refFoul = defaultDatabase.ref("games/-Kw_yHgkmL0f0LZK0vyN/name").set( "Chelsea" );
    $('.btnAdd').click(function(){
       $('.wrapper_add_edit').css("display", "block");
-      var newRef = ref.push().set({
+      var refid = ref.push().set({
         "awayname" : "",
         "createdate" : getToday(),
         "createuser" : "",
@@ -235,9 +233,7 @@
         "updatedate" : "",
         "updateuser" : ""
       });
-      // ref.on("child_added", function(snapshot, prevChildKey) {
-      // });
-      $('.txtRound').val(newRef);
+      alert(refid);
    });
 
    // Attach an asynchronous callback to read the data at our posts reference
@@ -282,7 +278,7 @@
       }
       return today = dd + '/' + mm + '/' + yyyy + ' ' +h+ ':'+mn;
    }
-   function openCity(evt, cityName) {
+   function openCity(evt, cityName, round) {
       var i, tabcontent, tablinks;
       tabcontent = document.getElementsByClassName("tabcontent");
       for (i = 0; i < tabcontent.length; i++) {
@@ -294,6 +290,27 @@
       }
       document.getElementById(cityName).style.display = "block";
       evt.currentTarget.className += " active";
+
+  }
+  function getGameDetails(round){
+    alert("getGameDetails"+gameId);
+    var refRound = defaultDatabase.ref("games/"+gameId+"/"+round);
+    console.log(JSON.stringify(refRound));
+    refRound.on('value', function(snapshot) {
+      var arrStr = "";
+      arrStr += '<table style="width: 96%;margin-left: 2%;margin-right: 2%;">';
+      arrStr += '<tr>';
+      arrStr += '<td style="width: 5%"><img title="Giảm" onclick="editPhoneActive(\'' + 1 + '\')" style="height: 25px; width: 25px;cursor:pointer;" class="img_delete" src="img/remove.png"/></td>';
+      arrStr += '<td style="width: 20%; text-align: center;">'+snapshot.val().home.goals+'</td>';
+      arrStr += '<td style="width: 5%"><img title="Tăng" onclick="editPhoneActive(\'' + 1 + '\')" style="height: 25px; width: 25px;cursor:pointer;" class="img_delete" src="img/plus.png"/></td>';
+      arrStr += '<td style="width: auto; text-align: center;">Bàn thắng</td>';
+      arrStr += '<td style="width: 5%"><img title="Giảm" onclick="editPhoneActive(\'' + 1 + '\')" style="height: 25px; width: 25px;cursor:pointer;" class="img_delete" src="img/remove.png"/></td>';
+      arrStr += '<td style="width: 20%; text-align: center;">'+snapshot.val().away.goals+'</td>';
+      arrStr += '<td style="width: 5%"><img title="Tăng" onclick="editPhoneActive(\'' + 1 + '\')" style="height: 25px; width: 25px;cursor:pointer;" class="img_delete" src="img/plus.png"/></td>';
+      arrStr += '</tr>';
+      arrStr += '  </table>';
+      $('tabcontent').html(arrStr);
+    });
   }
      </script>
 
