--- a/index.html
+++ b/index.html
@@ -283,19 +283,23 @@
    	var str = "";
     str += '<table style="width:100%">';
     str += '<tr>';
-    str += '<th>Trận đấu</th>';
-    str += '<th>Thời gian</th>';
-    str += '<th>Sân vận động</th>';
-    str += '<th>Hành động</th>';
+    str += '<th style="text-align: center;">Stt</th>';
+    str += '<th style="text-align: center;">Trận đấu</th>';
+    str += '<th style="text-align: center;">Thời gian</th>';
+    str += '<th style="text-align: center;">Sân vận động</th>';
+    str += '<th style="text-align: center;">Hành động</th>';
     str += '</tr>';
+    var count = 0;
    		snapshot.forEach(function(childSnapshot) {
       if(childSnapshot.val().deleted == "0")
       {
+        count ++;
         str += '<tr>';
-        str += '<td>'+childSnapshot.val().name+'</td>';
-        str += '<td>'+childSnapshot.val().createdate+'</td>';
-        str += '<td>'+childSnapshot.val().stadium+'</td>';
-        str += '<td><img title="Sửa" onclick="editGameDetails(\'' + childSnapshot.key + '\')" style="height: 25px; width: 25px;cursor:pointer;" class="img_delete" src="img/edit1.png"/><img title="Xóa" onclick="deleteUser(\'' + 2+ '\',\'Bạn muốn xóa số điện thoại này?\')" style="height: 25px; width: 25px; cursor:pointer;" class="img_delete" src="img/delete1.png"/></td>';
+        str += '<td style="width: 4%; text-align: center;">'+count+'</td>';
+        str += '<td style="width: auto">'+childSnapshot.val().name+'</td>';
+        str += '<td style="width: 20%">'+childSnapshot.val().createdate+'</td>';
+        str += '<td style="width: 30%">'+childSnapshot.val().stadium+'</td>';
+        str += '<td style="text-align: center; width: 15%"><img title="Sửa" onclick="editGameDetails(\'' + childSnapshot.key + '\')" style="height: 25px; width: 25px;cursor:pointer; margin-right: 10px;" class="img_delete" src="img/settings.png"/><img title="Xóa" onclick="deleteUser(\'' + 2+ '\',\'Bạn muốn xóa số điện thoại này?\')" style="height: 25px; width: 25px; cursor:pointer;" class="img_delete" src="img/delete.png"/></td>';
         str += '</tr>';
       }
 
