--- a/index.html
+++ b/index.html
@@ -23,18 +23,32 @@
 
     <!-- Custom styles for this template -->
     <link href="css/new-age.css" rel="stylesheet">
-    <link href="css/jquery.datetimepicker.min.css" rel="stylesheet">
+    <link href="date/jquery.datetimepicker.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-app.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-auth.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-database.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-firestore.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-messaging.js"></script>
-    <script src="js/jquery.datetimepicker.full.js"></script>
+    <script src="date/jquery.datetimepicker.full.js"></script>
 
   </head>
 
   <body id="page-top">
+    <script>
+      var config = {
+        apiKey: "AIzaSyBpawnGQ1WPtyOHODWAxuyG9dy9yuUThOY",
+        authDomain: "resultsgame.firebaseapp.com",
+        databaseURL: "https://resultsgame.firebaseio.com",
+        projectId: "resultsgame",
+        storageBucket: "resultsgame.appspot.com",
+        messagingSenderId: "1080413171479"
+       };
+     var gameId = "";
+     var round = "round1"; // Mặc định hiển thị kết quả Hiệp 1
+     var defaultApp = firebase.initializeApp(config);
+     var defaultDatabase = defaultApp.database();
+    </script>
     <div class="wrapper_add_edit" id="wrapper_add_edit" style="height: 100%; padding-top: 0%">
       <div class="wrapper_form" id="wrapper_form" style="margin-top: 70px; ">
           <div class="close" style="padding-right: 10px; cursor: pointer;">
@@ -46,17 +60,7 @@
               <div class="tablinks tablinks_manageUserGroup" onclick="getGameDetails('all')"><label for="tab-2">Tất cả</label></div>
           </div>
           <div id="London" class="tabcontent">
-            <!-- <div class="wrapper_stadium" style=" clear: both; float: left; width: 50%; padding-left: 5%;">
-              <span style="float: left;width: 20%;">Sân vận động</span>
-              <select class="stadium" style="width: 40%;">
-              </select>
-            </div> -->
             <table style="margin-left: 5%;margin-right: 5%; width: 90%">
-              <!-- <tr>
-                <td style="width: 10%">Tên trận đấu</td>
-                <td style="width: 40%" ><input type="text" class="nameMatch"style="width: 60%; height: 24px;" /></td>
-              </tr>
-              <tr> -->
                 <td style="width: 10%">Đội nhà</td>
                 <td style="width: 40%"><select class="homeclub club" style="width: 60%;"></select></td>
                 <td style="width: 10%">Đội khách</td>
@@ -66,7 +70,19 @@
                 <td style="width: 10%">Sân vận động</td>
                 <td style="width: 40%"><select class="stadium" style="width: 60%;"></select></td>
                 <td style="width: 10%">Thời gian</td>
-                <td style="width: 40%"><input type="text" class="timeStart"style="width: 60%; height: 24px;" /></td>
+                <td style="width: 40%">
+                  <input type="text" class="datetimepicker"style="width: 60%; height: 24px;" />
+                  <script>
+                    $('.datetimepicker').datetimepicker({
+                      format:'d/m/Y H:i',
+                      step:5
+                    }).on("input change", function (e) {
+                      var dateStart = $(this).val();
+                      var refDate = defaultDatabase.ref("games/"+gameId+"/date").set(dateStart);
+                      // console.log(dateStart);
+                  });
+                  </script>
+                </td>
               </tr>
               <tr>
                 <td style="width: 10%">Bắt đầu</td>
@@ -94,7 +110,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Download</a>
             </li>
             <li class="nav-item">
@@ -102,25 +118,25 @@
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
     </nav>
 
     <header class="masthead">
-      <div class="container h-100">
-        <div class="row h-100 " style="background: white; margin-top: 56px;">
-          <div class="col-lg-12 " style="padding-top: 20px; padding-bottom: 20px; ">
-            <button type="button" class="btn btn-primary btnAdd">Thêm mới</button>
-          </div>
+      <div class="container h-100" style="background: white">
+        <!-- <input type="submit" value="Submit"> -->
+        <button type="button" class="btn btn-primary btnAdd" style="margin-top: 60px; cursor: pointer;">Thêm mới</button>
+        <div class="row" style="margin-top: 56px;">
           <div class="col-lg-12 content">
             <div class="header-content mx-auto">
             </div>
           </div>
+
           <div class="col-lg-5 my-auto">
             <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
+              <div class="device-mockup iphone6_plus portrait white" style="display: none">
                 <div class="device">
                   <div class="screen">
                   </div>
@@ -162,25 +178,26 @@
     <!-- Custom scripts for this template -->
     <script src="js/new-age.min.js"></script>
     <script>
-    var config = {
-      apiKey: "AIzaSyBpawnGQ1WPtyOHODWAxuyG9dy9yuUThOY",
-      authDomain: "resultsgame.firebaseapp.com",
-      databaseURL: "https://resultsgame.firebaseio.com",
-      projectId: "resultsgame",
-      storageBucket: "resultsgame.appspot.com",
-      messagingSenderId: "1080413171479"
-     };
-   var gameId = "";
-   var round = "round1"; // Mặc định hiển thị kết quả Hiệp 1
-   var defaultApp = firebase.initializeApp(config);
-   var defaultDatabase = defaultApp.database();
+  //   var config = {
+  //     apiKey: "AIzaSyBpawnGQ1WPtyOHODWAxuyG9dy9yuUThOY",
+  //     authDomain: "resultsgame.firebaseapp.com",
+  //     databaseURL: "https://resultsgame.firebaseio.com",
+  //     projectId: "resultsgame",
+  //     storageBucket: "resultsgame.appspot.com",
+  //     messagingSenderId: "1080413171479"
+  //    };
+  //  var gameId = "";
+  //  var round = "round1"; // Mặc định hiển thị kết quả Hiệp 1
+  //  var defaultApp = firebase.initializeApp(config);
+  //  var defaultDatabase = defaultApp.database();
    var ref = defaultDatabase.ref("games");
    var h1 = document.getElementById('timehome'),
     //  start = document.getElementById('starthome'),
      seconds = 0, minutes = 0, hours = 0, secondsaway = 0, minutesaway = 0, hoursaway = 0,secondsmatch = 0, minutesmatch = 0, hoursmatch = 0,
      t,taway,tmatch;
 
-loadClub();
+
+   loadClub();
    $('.close').click(function(){
       $('.wrapper_add_edit').css("display", "none");
       clearTimeout(t);
@@ -197,6 +214,7 @@ loadClub();
       "homename" : "",
       "name" : "",
       "timematch" : "00:00:00",
+      "date" : "00:00:00",
       "round1" : {
         "7corners" : {
           "away" : 0,
@@ -275,6 +293,45 @@ loadClub();
         },
         "timematch" : "00:00:00"
       },
+      "all" : {
+        "7corners" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "3fouls" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "0goals" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "6offsides" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "8possession" : {
+          "away" : "00:00:00",
+          "home" : "00:00:00"
+        },
+        "5redcard" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "1shots" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "2shotsontarget" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "4yellowcard" : {
+          "away" : 0,
+          "home" : 0
+        },
+        "timematch" : "00:00:00"
+      },
       "stadium" : "",
       "updatedate" : "",
       "updateuser" : ""
@@ -309,7 +366,7 @@ loadClub();
         str += '<tr>';
         str += '<td style="width: 4%; text-align: center;">'+count+'</td>';
         str += '<td style="width: auto">'+childSnapshot.val().name+'</td>';
-        str += '<td style="width: 20%">'+childSnapshot.val().createdate+'</td>';
+        str += '<td style="width: 20%">'+childSnapshot.val().date+'</td>';
         str += '<td style="width: 30%">'+childSnapshot.val().stadium+'</td>';
         str += '<td style="text-align: center; width: 15%"><img title="Sửa" onclick="editGameDetails(\'' + childSnapshot.key + '\')" style="height: 25px; width: 25px;cursor:pointer; margin-right: 10px;" class="img_delete" src="img/settings.png"/><img title="Xóa" onclick="deleteGames(\'' + childSnapshot.key + '\')" style="height: 25px; width: 25px; cursor:pointer;" class="img_delete" src="img/delete.png"/></td>';
         str += '</tr>';
@@ -373,7 +430,6 @@ loadClub();
 
     var refStadium = defaultDatabase.ref("games/"+gameId+"/stadium");
     $('.stadium option:selected').removeAttr('selected');
-
     refStadium.on("value", function(snapshot) {
       // alert($('.stadium :selected').text()) ;
       $(".stadium option").filter(function() {
@@ -385,12 +441,11 @@ loadClub();
     var refGame = defaultDatabase.ref("games/"+gameId);
     refGame.on("value", function(snapshot) {
       snapshot.forEach(function(e){
-        // if (e.key == "name") {
-        //   $('.nameMatch').val(e.val());
-        // }
+        if (e.key == "date") {
+          $('.datetimepicker').val(e.val());
+        }
       });
     });
-
     // Thời gian trận
     var refTimeMatch = defaultDatabase.ref("games/"+gameId+"/"+round+"/timematch");
     refTimeMatch.on("value", function(snapshot) {
@@ -408,6 +463,7 @@ loadClub();
       hoursmatch = Number(arrMatch[0]); minutesmatch = Number(arrMatch[1]) ; secondsmatch = Number(arrMatch[2]);
     });
 
+
     // Thông tin trận
     var refRound = defaultDatabase.ref("games/"+gameId+"/"+round);
     refRound.on("value", function(snapshot) {
@@ -417,8 +473,6 @@ loadClub();
       snapshot.forEach(function(e){
         if (e.key == "timematch") {
           return;
-          // alert(111);
-          // continue;
         }
         if (e.key == "8possession") {
           var valHome = validatePossession('home',e.val().away, e.val().home);
@@ -447,7 +501,7 @@ loadClub();
           arrPossession += '<td style="width: 15%; text-align: center; padding: 5px 0px;"><span id="timeraway" ><time>'+e.val().away+'</time></span></td>';
           arrPossession += '<td style="width: 10%; padding: 5px 0px; text-align: center;"><span class="possessionaway">'+valAway+'</span></td>';
           arrPossession += '</tr>';
-          arrPossession += '<tr><td colspan="8" style="padding: 5px 0px; text-align: center;"><img title="" onclick="pauseTime()" style="height: 40px; width: 40px;cursor:pointer;" class="img_delete" src="img/pause.png"/></td></tr>';
+          arrPossession += '<tr><td colspan="8" style="padding: 5px 0px; text-align: center;"><img title="" onclick="pauseTime()" style="height: 40px; width: 40px;cursor:pointer;" class="img_delete" src="img/pausered.png"/></td></tr>';
         }
         else {
           var validateKey = "";
@@ -499,16 +553,61 @@ loadClub();
   function updateGameDetails(typeTeam, field, val){
     if(Number(val) >= 0)
     {
-      if (field == "1shots") // Nếu là cú sút trúng đích thì tự động thêm mới vào sút
+      if (field == "2shotsontarget") // Nếu là cú sút trúng đích thì tự động thêm mới vào sút
       {
-        var refShotsontarget = defaultDatabase.ref("games/"+gameId+"/"+round+"/2shotsontarget/"+typeTeam);
-        var valShotsontarget = 0;
-        refShotsontarget.on("value", function(snapshot) {
-          valShotsontarget = Number(snapshot.val())+1;
+        var refOldShot = defaultDatabase.ref("games/"+gameId+"/"+round+"/1shots/"+typeTeam);
+        var Oldshot = 0;
+        refOldShot.on("value", function(snapshot) {
+          Oldshot = Number(snapshot.val());
         });
-        var refShotontarget = defaultDatabase.ref("games/"+gameId+"/"+round+"/2shotsontarget/"+typeTeam).set(valShotsontarget);
+
+
+        var refShotsontarget = defaultDatabase.ref("games/"+gameId+"/"+round+"/2shotsontarget/"+typeTeam);
+        var newShotsontarget = 0;
+        refShotsontarget.on("value", function(snapshot) {
+          if (Number(val) > Number(snapshot.val())) {
+            newShotsontarget = Oldshot + 1;
+          }
+          else {
+            newShotsontarget = Oldshot - 1;
+          }
+        });
+        var refUdShots = defaultDatabase.ref("games/"+gameId+"/"+round+"/1shots/"+typeTeam).set(newShotsontarget);
+
+        // var refshotsOld = defaultDatabase.ref("games/"+gameId+"/"+round+"/1shots/"+typeTeam);
+        // var valShot = 0;
+        // refshotsOld.on("value", function(snapshot) {
+        //   valShot = Number(snapshot.val())+1;
+        // });
+        // var refUdShots = defaultDatabase.ref("games/"+gameId+"/"+round+"/1shots/"+typeTeam).set(valShot);
+
+        //Update All
+        // var refShotsontargetAll = defaultDatabase.ref("games/"+gameId+"/"+all+"/2shotsontarget/"+typeTeam);
+        // var valShotsontargetAll = 0;
+        // refShotsontargetAll.on("value", function(snapshot) {
+        //   valShotsontargetAll = Number(snapshot.val())+1;
+        // });
+        // var refUdShotontargetAll = defaultDatabase.ref("games/"+gameId+"/"+round+"/2shotsontarget/"+typeTeam).set(valShotsontarget);
       }
+      var refOldFound = defaultDatabase.ref("games/"+gameId+"/"+round+"/"+field+"/"+typeTeam);
+      var valOldFound = 0;
+      refOldFound.on("value", function(snapshot) {
+        if (Number(val)>Number(snapshot.val())) {
+          valOldFound = "-1";
+        }
+        else {
+          valOldFound = "1";
+        }
+      });
       var refRound = defaultDatabase.ref("games/"+gameId+"/"+round+"/"+field+"/"+typeTeam).set(val);
+      // Update giá trị cũ
+      var OldAll = 0;
+      var refOldAll = defaultDatabase.ref("games/"+gameId+"/all/"+field+"/"+typeTeam);
+      refOldAll.on("value", function(snapshot) {
+        OldAll = Number(snapshot.val()) + Number(valOldFound);
+      });
+      var refUpdateAll = defaultDatabase.ref("games/"+gameId+"/all/"+field+"/"+typeTeam).set(OldAll);
+
       pushDetail(field, typeTeam);
     }
 
@@ -655,6 +754,7 @@ function starttimermatch()
     var valStadium = $('.stadium option:selected').text();
     var refStadium = defaultDatabase.ref("games/"+gameId+"/stadium").set(valStadium);
   });
+
   // Tắt bật kiểm soát bóng
   function starthomeAction(){
     timer();
@@ -665,6 +765,7 @@ function starttimermatch()
     timeraway();
     t = null;
   }
+
   // $('.img_starthome').click(function(){
   //   alert(1111);
   //
